[package]
name = "remove-async-await"
description = "A procedural macro to make an async function blocking by removing async and awaits."
authors = ["naturecodevoid"]
homepage = "https://github.com/naturecodevoid/remove-async-await"
repository = "https://github.com/naturecodevoid/remove-async-await"
documentation = "https://docs.rs/remove-async-await"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "fold"] }
quote = "1.0"

[lib]
proc-macro = true
